feat: 사용자 조회 및 프로필 수정 기능 개선